# polycons_cxx

./: .env  .gdb.tap.sh_profile.rc  .gdbinit  .gitignore  .indent.pro  .vim.custom  CMakeLists.txt  NOTES.md  TutorialConfig.h.in
app/: CMakeLists.txt  main.cpp  main.cxx
math/: CMakeLists.txt  MathExports.h  Vector.cpp  Vector.h  Vector.tpp
math/advanced/: AdvancedFunctions.cpp  AdvancedFunctions.h
math/simple/: SimpleFunctions.cpp  SimpleFunctions.h
